# embedded-sensor-interface

./: .gitignore  README.md  verification_report.md
docs/: Design.md  ICD.md  Timing.md  Verification.md
firmware/: CMakeLists.txt  prj.conf
firmware/src/: main.c  parameters.c  parameters.h  sensor_sim.c  sensor_sim.h  state_machine.c  state_machine.h  uart_protocol.c  uart_protocol.h
host_tools/: cli.py
host_tools/tests/: conftest.py  test_protocol.py
